--- a/Phase 10 Easy Score/Base.lproj/Main.storyboard
+++ b/Phase 10 Easy Score/Base.lproj/Main.storyboard
@@ -3573,7 +3573,7 @@ Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed 
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="dxM-LL-7bw"/>
+        <segue reference="nPQ-DM-qVR"/>
         <segue reference="QhZ-LM-gzb"/>
         <segue reference="v8F-u5-yuE"/>
     </inferredMetricsTieBreakers>
